# leda-contrib-self-update-agent

./: .clang-format  .gitignore  .gitmodules  .ort.yml  CMakeLists.txt  Dockerfile.amd64  Dockerfile.arm64  README.md  clang-format.sh  project.spdx.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/build-container-image/: action.yaml
.github/actions/build-docker-image/: action.yaml
.github/actions/build-native-binary/: action.yaml
.github/workflows/: docker-publish.yml  main.yaml  main_developer.yaml  native-build.yml  ocaas.yaml  release.yaml
cmake/: dependencies.cmake
cmake/linux/amd64/: toolchain.cmake
cmake/linux/arm64/: toolchain.cmake
docs/: bfb.md  data-privacy-notice.md  k8s.md  migration_guide.md
docs/building/: README.md
docs/deploying/: README.md  sua-service.yaml
docs/testing/: README.md
docs/testing/fileserver/: Dockerfile
docs/testing/fileserver/bundle/: bundle
docs/testing/mqtt/: command-activate.json  command-cleanup.json  command-download.json  command-rollback.json  command-update.json  command_install.json  current-state-get.json  mosquitto.conf  start.json  start.yaml
scripts/: build.sh  build_glib_amd64.sh  build_glib_arm64.sh  build_openssl_amd64.sh  build_openssl_arm64.sh
src/: CMakeLists.txt  Context.h  Defaults.cpp  Defaults.h  FotaEvent.cpp  FotaEvent.h  Logger.cpp  Logger.h  PayloadMessages.h  SelfUpdateAgent.cpp  SelfUpdateAgent.h  SoftwareUpdateAgent.cpp  SoftwareUpdateAgent.h  TechCodes.h  main.cpp  version.cpp.in  version.h  version.h.in
src/Download/: Downloader.cpp  Downloader.h  IDownloader.h
src/FSM/: FSM.cpp  FSM.h  State.cpp  State.h  StateFactory.cpp  StateFactory.h
src/FSM/States/: Activating.cpp  Activating.h  Cleaning.cpp  Cleaning.h  Connected.cpp  Connected.h  Downloading.cpp  Downloading.h  Failed.cpp  Failed.h  Idle.cpp  Idle.h  Installed.cpp  Installed.h  Installing.cpp  Installing.h  SendCurrentState.cpp  SendCurrentState.h  Uninitialized.cpp  Uninitialized.h
src/Install/: DBusRaucInstaller.cpp  DBusRaucInstaller.h  DummyRaucInstaller.cpp  DummyRaucInstaller.h  IRaucInstaller.h  Installer.cpp  Installer.h
src/Mqtt/: IMqttMessagingProtocol.h  IMqttProcessor.h  MqttConfiguration.h  MqttListener.h  MqttMessage.cpp  MqttMessage.h  MqttMessageDeserializer.cpp  MqttMessageDeserializer.h  MqttMessageSerializer.cpp  MqttMessageSerializer.h  MqttMessagingProtocolJSON.cpp  MqttMessagingProtocolJSON.h  MqttMessagingProtocolYAML.cpp  MqttMessagingProtocolYAML.h  MqttProcessor.cpp  MqttProcessor.h
src/Patterns/: Dispatcher.cpp  Dispatcher.h  Worker.h
src/Utils/: BundleChecker.cpp  BundleChecker.h  IBundleChecker.h  JsonUtils.cpp  JsonUtils.h  ServerAddressParser.cpp  ServerAddressParser.h
utest/: CMakeLists.txt  MockBundleChecker.h  MockDownloader.h  MockFSM.h  MockMqttMessagingProtocol.h  MockMqttProcessor.h  MockRaucInstaller.h  TestDispatcher.cpp  TestDownloader.cpp  TestFSM.cpp  TestLogger.cpp  TestMessageDeserializer.cpp  TestMessageSerializer.cpp  TestMqttMessagingProtocolJSON.cpp  TestMqttMessagingProtocolYAML.cpp  TestSelfUpdateScenarios.cpp  TestServerAddressParser.cpp  TestStateFactory.cpp  Utils.cpp  Utils.h  sua-apache2.conf  sua-certificate.config
